# django-feat-redis-om

./: .gitignore  README.md  pyproject.toml
core/: asgi.py  settings.py  urls.py
core/templates/: core.html
quiz/: consumers.py  forms.py  redis_models.py  urls.py  views.py  ws_urls.py
quiz/templates/quiz/: create.html  index.html  quiz.html  result.html
