[tool.poetry]
name = "django-feat-redis-om"
version = "0.1.0"
description = ""
authors = ["Hans Tognon <learningway403@gmail.com>"]
readme = "README.md"
packages = [{include = "django_feat_redis_om"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
django = "^4.1.3"
redis-om = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
