[tool.poetry]
name = "django-feat-redis-om"
version = "0.1.0"
description = ""
authors = ["Hans Tognon <learningway403@gmail.com>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
django = "^4.1.3"
redis-om = "^0.1.0"
daphne = "^4.0.0"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
